installers/aws-eks/install/templates/studio/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: studio
  namespace: legend
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: studio
    ci.name: studio
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: studio
              servicePort: __LEGEND_STUDIO_PORT__
            path: /studio
